[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/game/WaterSwitch.gd" type="Script" id=1]
[ext_resource path="res://sounds/game/water_splash.ogg" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("lines/Line2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( -1, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("lines/Line2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 16, 0 ), Vector2( 17, -1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("lines/Line2D3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 16, 16 ), Vector2( 17, 17 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("lines/Line2D4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 16 ), Vector2( -1, 17 ) ]
}

[node name="WaterSwitch" type="Node2D"]
script = ExtResource( 1 )

[node name="ClickArea" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.0705882 )
monitoring = false
monitorable = false
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 1 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 48
lifetime = 1.2
one_shot = true
speed_scale = 6.0
explosiveness = 0.86
randomness = 0.23
lifetime_randomness = 0.18
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, -8 )
angular_velocity = 5.0
orbit_velocity = 0.2
radial_accel = 32.2
radial_accel_random = 0.2
tangential_accel = 2.54
damping = 11.86
color = Color( 0.509804, 0.54902, 0.709804, 0.701961 )

[node name="ShipCollisionDetector" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.32549 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipCollisionDetector"]
shape = SubResource( 2 )

[node name="lines" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="lines"]
points = PoolVector2Array( -8, -6, -8, -8, -6, -8 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="Line2D2" type="Line2D" parent="lines"]
position = Vector2( 16, 0 )
points = PoolVector2Array( -8, -6, -8, -8, -10, -8 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="Line2D3" type="Line2D" parent="lines"]
position = Vector2( 16, 16 )
points = PoolVector2Array( -8, -10, -8, -8, -10, -8 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="Line2D4" type="Line2D" parent="lines"]
position = Vector2( 0, 16 )
points = PoolVector2Array( -8, -10, -8, -8, -6, -8 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="lines_anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 3 )

[node name="splash_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="input_event" from="ClickArea" to="." method="_on_Area2D_input_event"]
[connection signal="area_entered" from="ShipCollisionDetector" to="." method="_on_ShipCollisionDetector_area_entered"]
[connection signal="area_exited" from="ShipCollisionDetector" to="." method="_on_ShipCollisionDetector_area_exited"]
